--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!-- App-komponentin käyttöliittymätemplaatti joka sisältää 
 yhden itse tehdyn komponentin eli app-calculatorin. 
 
-Näin yksikertaisessa sovelluksessa calculator-komponentin 
+Näin yksinkertaisessa sovelluksessa calculator-komponentin 
 olisi voinut jättää pois ja tehdä laskimen suoraan app-komponentin
 sisään, mutta hyvä käytänne on tehdä laskin omaan komponenttiinsa. -->
 
