--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,8 @@
 yhden itse tehdyn komponentin eli app-calculatorin. 
 
 Näin yksinkertaisessa sovelluksessa calculator-komponentin 
-olisi voinut jättää pois ja tehdä laskimen suoraan app-komponentin
-sisään, mutta hyvä käytänne on tehdä laskin omaan komponenttiinsa. -->
+olisi voinut jättää pois ja tehdä laskimen suoraan app-komponenttiin,
+mutta hyvä käytänne on tehdä laskin omaan komponenttiinsa. -->
 
 <h2>{{title}}</h2>
 <app-calculator></app-calculator>
